--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@
 dist: trusty
 language: java
 jdk: oraclejdk8
-script: ./docToolchain/bin/doctoolchain . generateHTML
+script:
+  - ./docToolchain/bin/doctoolchain . generateHTML
+  - echo 'hiring.picnic.tech' > target/html5/CNAME
 deploy:
   local_dir: target/html5
   provider: pages
