Starting with a fresh github pages project that doesn't use docToolchain. The index page will redirect to `https://jobs.picnic.app/en/tech`

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
-# General Java development.
-*.iml
-.classpath
-.DS_Store
-.factorypath
-.gradle
-.idea
-.project
-.settings
-.vscode
-target
+_site
+.sass-cache
+.jekyll-cache
+.jekyll-metadata
+vendor
